--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 								<p>cfsaezbravo@gmail.com</p>
                           </div>
                         </div>
-                        <img class='foto' src="../bsas17/IMG_1289.JPG" alt="" />
+                        <img class='foto' src="../../bsas17/IMG_1289.JPG" alt="" />
                 </div>
             </div>
 				<p>Desarrolladora Front-End Jr. en potencia.</p>
